# domain-builder

./: .gitignore  LICENSE  Makefile  README
control-domain/: .gitignore  Makefile  cmdlines.c  cmdlines.h  control.c  driverprep.c  driverprep.h  log.h  smallOS_compat.c
control-domain/include/: control-domain.h
db-boot/: .gitignore  Makefile  README  bzimage.h  image_loader.c  image_loader.h  kernel.c
db-boot/test/: test_cpio.c
lib/BaseHashDSL/: BaseHashDSL.cabal  BaseHashDSL.hs  DbSpec.hsc  LICENSE  Makefile  VM.hs
lib/c/: Makefile  README
lib/c/includes/: byteswap.h  ctype.h  errno.h  inttypes.h  limits.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  unistd.h
lib/c/includes/heap/: mm.h
lib/c/licenses/: miniOS-FreeBSD-LICENSE
lib/c/src/: ctype.c  malloc_in.c  stdio.c  stdlib.c  string.c
lib/chan/: LICENSE  Makefile
lib/chan/includes/smallOS/: chan.h
lib/chan/src/: chan.c
lib/console/: Makefile
lib/console/includes/: console.h
lib/console/src/: console.c
lib/cpio/: Makefile
lib/cpio/includes/: cpio.h
lib/cpio/src/: cpio.c
lib/db/: .gitignore  Makefile  README
lib/db-spec/: .gitignore  Makefile
lib/db-spec/includes/: db-spec.h
lib/db-spec/src/: db-api_validate.c
lib/db/build-tools/: README  mkheader.py
lib/db/includes/: dom_builder.h
lib/db/src/: db.generic.h  db.h  dom_builder.c  dom_builder.generic.c  dom_elf.c  dom_elf.generic.c  dom_hvm.c  dom_hvm.generic.c  dom_hyper.c  dom_mem.c  dom_mem.generic.c  dom_page_tables.generic.c  dom_page_tables.x86_32pae.c  dom_page_tables.x86_64.c  dom_perms.c  dom_phys_map.c  dom_phys_map.generic.c  dom_regs.c  dom_shared_info.c  dom_shared_info.generic.c  xc_cpuid_x86.c
lib/elf/: Makefile  README
lib/elf/includes/elf-xen/: libelf.generic.h  libelf.h
lib/elf/src/: libelf-dominfo.c  libelf-dominfo.generic  libelf-loader.c  libelf-loader.generic  libelf-private.h
lib/sha256/: Makefile  block.c  lemmas.h  sha256.c  testDriver.c
lib/sha256/includes/: BV.h  sha256.h
lib/signature/: Makefile
lib/signature/includes/: signature.h
lib/signature/src/: mod_exp.c  mod_exp.h  signature.c
lib/smallOS/: Makefile  link.lds
lib/smallOS/includes/smallOS/: assert.h  domctl.h  events.h  evtchn.h  flask.h  grant_table.h  hypercall.h  mem.h  printk.h  regs.h  ring-buffer.h  shutdown.h  (+5 more)
lib/smallOS/src/: assert.c  callback.S  events.c  evtchn.c  flask.c  grant_table.c  mem.c  printk.c  reset_virt.c  ring-buffer.c  shared_info.c  start.S  time.c  xs.c
lib/zlib-1.2.5/: ChangeLog  Makefile  deflate.c  infback.c  inflate.c  main.c  zconf.h  zlib.h  zutil.c
mk/: compile  config.example  link  rules  rules-basic
protocols/: Rules.mk  control-domain-api.h  control-domain-schema.h  db-api.h  hs-db-api.h  prelude.h
tools/: Makefile  README
tools/compile-db-spec/: .gitignore  BinCdSchema.hsc  BinDbSpec.hsc  BinarySchema.hs  CompileConfiguration.hs  CompileSchema.hs  DeviceModelSettings.hs  DeviceNumber.hs  ExceptionsT.hs  LICENSE  Makefile  Schema.hs  ShellDmRender.hs  SimpleKeyValue.hs  Spec.hs  StaticCheckMonad.hs  compile-db-spec.cabal
tools/protocol-spec/: LICENSE  Makefile  protocol-spec.cabal
tools/protocol-spec/src/: AST.hs  CTypes.hs  Check.hs  Common.hs  Decode.hs  Driver.hs  Encode.hs  Parse.hs  Pretty.hs
tools/protocol-spec/tests/simple/: input.h  main.c  runtest.sh
tools/protocol-spec/tests/simple/expect/: test.output  test1.out  test2.out  test3.out
tools/protocol-spec/tests/unions/: main.c  protocol.h  runtest.sh
tools/protocol-spec/tests/unions/expect/: test.out  test1.out  test2.out
